--- a/utils/dvb/Makefile.am
+++ b/utils/dvb/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = dvb-fe-tool dvbv5-zap dvbv5-scan dvb-format-convert
+bin_PROGRAMS = dvb-fe-tool dvbv5-zap dvbv5-scan dvb-format-convert avl-scan
 
 if WITH_DVBV5_REMOTE
 bin_PROGRAMS += \
@@ -6,6 +6,11 @@ bin_PROGRAMS += \
 endif
 
 man_MANS = dvb-fe-tool.1 dvbv5-zap.1 dvbv5-scan.1 dvb-format-convert.1
+
+avl_scan_SOURCES = avl-scan.c
+avl_scan_LDADD = ../../lib/libdvbv5/libdvbv5.la @LIBINTL@ $(LIBUDEV_LIBS) $(XMLRPC_LDADD) $(PTHREAD_LDADD)
+avl_scan_LDFLAGS = $(ARGP_LIBS) -lm $(LIBUDEV_CFLAGS) $(XMLRPC_LDFLAGS) $(PTHREAD_LDFLAGS)
+avl_scan_CFLAGS =  -I../../lib/ $(XMLRPC_CFLAGS) $(LIBUDEV_CFLAGS) $(PTHREAD_CFLAGS)
 
 dvb_fe_tool_SOURCES = dvb-fe-tool.c
 dvb_fe_tool_LDADD = ../../lib/libdvbv5/libdvbv5.la @LIBINTL@ $(LIBUDEV_LIBS) $(XMLRPC_LDADD) $(PTHREAD_LDADD)
